<package>
  <name>phantomx_arm_description</name>
  <version>0.3.3</version>
  <description>
   phantomx_arm_description contains URDF files and meshes for the Phantomx arm.
  </description>
  <author>Jorge Santos of turtlebot fame</author>
  <maintainer email="cdr.wolfe@gmail.com">Wolfe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
</package>
